Tests still not compiling, K2 mode works?